Modify navigation bar icon

--- a/charts.html
+++ b/charts.html
@@ -29,9 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="active" href="#">
-                            <div class="tooltip-icon" title="SNS"><i class="fas fa-comments fa-far"></i></div>
-                        </a>
+                        <div class="tooltip-icon"a title="관리자에게 메일 전송" onclick=showModal()><i class="fas fa-exclamation-triangle"></i></div> 
                     </li>
                 </ul>
             </div>
